--- a/pixrus/accounts/templates/home.html
+++ b/pixrus/accounts/templates/home.html
@@ -12,7 +12,7 @@
     <h1>Welcome, {{ user.username }}!</h1>
     {% if user.is_authenticated %}
         <p>You are logged in. Enjoy the restricted content!</p>
-        <a href="{% url 'landing' %}" class="button">Logout</a>
+        <a href="{% url 'account_logout' %}" class="button">Logout</a>
     {% endif %}
 </div>
 </body>
