--- a/pixrus/accounts/templates/login.html
+++ b/pixrus/accounts/templates/login.html
@@ -10,14 +10,8 @@
 <body>
 <div class="container">
     <h2>Login</h2>
-    <form method="post" action="{% url 'account_login' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="button">Login</button>
-    </form>
-    <p>Or use a third-party:</p>
+    <p>Use Google to log in:</p>
     <a href="{% url 'google_login' %}" class="button">Login with Google</a>
-    <p>Don't have an account? <a href="{% url 'account_signup' %}">Sign up</a></p>
 </div>
 </body>
 </html>
