--- a/pixrus/seller/templates/seller_landing.html
+++ b/pixrus/seller/templates/seller_landing.html
@@ -6,7 +6,7 @@
     <title>Seller Dashboard</title>
 </head>
 <body>
-    <h1>Welcome, {{ seller.user.username }}</h1>
+    <h1>Welcome, {{ seller.user_name }}</h1>
 
     <h2>Active Picks</h2>
     <ul>
