--- a/pixrus/buyer/templates/buyer_landing.html
+++ b/pixrus/buyer/templates/buyer_landing.html
@@ -6,6 +6,6 @@
     <title>Buyer Dashboard</title>
 </head>
 <body>
-    <h1>Hello, this is the buyer page!</h1>
+    <h1>Hello {{ buyer.user.get_full_name }}, this is the buyer page!</h1>
 </body>
 </html>
