--- a/pixrus/seller/templates/seller_landing.html
+++ b/pixrus/seller/templates/seller_landing.html
@@ -112,7 +112,7 @@
             {% else %}
                 <p style="color: red"><strong>Bet Failed</strong></p>
             {% endif %}
-            <p>Pick multiplier: {{ historical_pick.pick_data.multiplier }}</p>
+            <p>Pick Odds: {{ historical_pick.pick_data.multiplier }}</p>
         </div>
         {% endfor %}
     </div>
@@ -124,7 +124,8 @@
                 <h3>{{ active_pick.game_data.team_1 }} vs. {{ active_pick.game_data.team_2 }}</h3>
                 <p>Event Start: {{ active_pick.event_start }}</p>
                 <p>Pick: {{ active_pick.type_of_pick }} - {{ active_pick.pick_data.target_winner }}</p>
-                <p>Pick multiplier: {{ active_pick.pick_data.multiplier}}</p>
+                <p>Pick Odds: {{ active_pick.pick_data.odds}}</p>
+                <p>Sportsbook: {{ active_pick.pick_data.book_maker }}</p>
             </div>
         {% endfor %}
     </div>
