--- a/pixrus/buyer/templates/buyer_landing.html
+++ b/pixrus/buyer/templates/buyer_landing.html
@@ -71,9 +71,11 @@
         <h2>Historical Picks</h2>
         {% for historical_pick in historical_picks %}
         <div class="card">
-            <h3>{{ historical_pick.game_event_result.team_1 }} : {{ historical_pick.game_event_result.team_1_points }} vs. {{ historical_pick.game_event_result.team_2 }} : {{ historical_pick.game_event_result.team_2_points }}</h3>
+            <h3>{{ historical_pick.game_event_result.home_team }} : {{ historical_pick.game_event_result.home_team_points }} vs. {{ historical_pick.game_event_result.away_team }} : {{ historical_pick.game_event_result.away_team_points }}</h3>
             <p>Finished at: {{ historical_pick.event_time_done }}</p>
             <p>Original Pick: {{ historical_pick.type_of_pick }} - {{ historical_pick.pick_data.target_winner }}</p>
+            <p>Pick Odds: {{ historical_pick.pick_data.odds }}</p>
+            <p>Sportsbook: {{ historical_pick.pick_data.book_maker }}</p>
             {%  if historical_pick.pick_data.pick_success %}
                 <p style="color: green"><strong>Bet Successful</strong></p>
             {% else %}
@@ -88,9 +90,11 @@
         <h2>Active Picks</h2>
         {% for active_pick in active_picks %}
             <div class="card">
-                <h3>{{ active_pick.game_data.team_1 }} vs. {{ active_pick.game_data.team_2 }}</h3>
+                <h3>{{ active_pick.game_data.home_team }} vs. {{ active_pick.game_data.away_team }}</h3>
                 <p>Event Start: {{ active_pick.event_start }}</p>
                 <p>Pick: {{ active_pick.type_of_pick }} - {{ active_pick.pick_data.target_winner }}</p>
+                <p>Pick Odds: {{ active_pick.pick_data.odds }}</p>
+                <p>Sportsbook: {{ active_pick.pick_data.book_maker }}</p>
                 <p>Pick Sold by: {{ active_pick.seller.user.get_full_name }}</p>
             </div>
         {% endfor %}
