--- a/pixrus/seller/templates/seller_landing.html
+++ b/pixrus/seller/templates/seller_landing.html
@@ -109,7 +109,7 @@
             <p>Original Pick: {{ historical_pick.type_of_pick }} - {{ historical_pick.pick_data.target_winner }}</p>
             <p>Pick Odds: {{ historical_pick.pick_data.odds}}</p>
             <p>Sportsbook: {{ historical_pick.pick_data.book_maker }}</p>
-            <p>Bet Amount: {{ historical_pick.pick_data.bet_amount }}</p>
+            <p>Unit Amount: {{ historical_pick.pick_data.bet_amount }}</p>
             {%  if historical_pick.pick_data.pick_success %}
                 <p style="color: green"><strong>Bet Successful</strong></p>
             {% else %}
@@ -128,7 +128,7 @@
                 <p>Pick: {{ active_pick.type_of_pick }} - {{ active_pick.pick_data.target_winner }}</p>
                 <p>Pick Odds: {{ active_pick.pick_data.odds}}</p>
                 <p>Sportsbook: {{ active_pick.pick_data.book_maker }}</p>
-                <p>Bet Amount: {{ active_pick.pick_data.bet_amount }}</p>
+                <p>Unit Amount: {{ active_pick.pick_data.bet_amount }}</p>
             </div>
         {% endfor %}
     </div>
