games are now in ET time zone

--- a/pixrus/seller/templates/activate_pick.html
+++ b/pixrus/seller/templates/activate_pick.html
@@ -80,6 +80,7 @@
                 formData.append("multiplier", multiplier);
                 formData.append("home_team",home_team)
                 formData.append("away_team",away_team)
+                commence_time = new Date(commence_time).toISOString();
                 formData.append("commence_time",commence_time)
                 formData.append("unit_size",unit_amount)
 
