fixed small bug

--- a/pixrus/seller/templates/seller_landing.html
+++ b/pixrus/seller/templates/seller_landing.html
@@ -92,6 +92,7 @@
     <h2>Seller Stats</h2>
     <p><strong>Number of Successful Bets:</strong> {{ stats.num_of_success }}</p>
     <p><strong>Number of Failed Bets:</strong> {{ stats.num_of_failures }}</p>
+    <p><strong>Number of Units Won:</strong> {{ stats.units_won }}</p>
 </div>
 
 <div class="button-container">
