--- a/pixrus/seller/templates/seller_landing.html
+++ b/pixrus/seller/templates/seller_landing.html
@@ -106,7 +106,7 @@
         <h2>Historical Picks</h2>
         {% for historical_pick in historical_picks %}
         <div class="card">
-            <h3>{{ historical_pick.game_event_result.team_1 }} : {{ historical_pick.game_event_result.team_1_points }} vs. {{ historical_pick.game_event_result.team_2 }} : {{ historical_pick.game_event_result.team_2_points }}</h3>
+            <h3>{{ historical_pick.game_event_result.team_1 }} ({{ historical_pick.game_event_result.team_1_points }}) vs. {{ historical_pick.game_event_result.team_2 }} ({{ historical_pick.game_event_result.team_2_points }})</h3>
             <p>Original Pick: {{ historical_pick.type_of_pick }} - {{ historical_pick.pick_data.target_winner }}</p>
             <p>Pick Odds: {{ historical_pick.pick_data.odds}}</p>
             <p>Sportsbook: {{ historical_pick.pick_data.book_maker }}</p>
